Findbugs inefficient code
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@1044360 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: ffb220cdc7f88690cf2efc4675c67c3144891ecb