@@ -51,7 +51,7 @@ public class DurationAssertion extends AbstractScopedAssertion implements Serial
         // has the Sample lasted too long?
             if ( responseTime > duration) {
                 result.setFailure(true);
-                Object[] arguments = { new Long(responseTime), new Long(duration) };
+                Object[] arguments = { Long.valueOf(responseTime), Long.valueOf(duration) };
                 String message = MessageFormat.format(
                         JMeterUtils.getResString("duration_assertion_failure") // $NON-NLS-1$
                         , arguments);
